scss/partials/_interactions_summary.scss
div.is-reactions{
  float: left;
  margin-right: 32px;
  height: 32px;
  border-radius: 100px;
  background-color: $carrot_light_gray_2;
  padding: 2px 16px;
  color: $carrot_light_gray_3;
  @include avenir_H();
  font-size: 12px;

  @include mobile() {
    margin-right: 8px;
  }

  &.reacted {
    background-color: $carrot_light_yellow;
    color: $carrot_yellow;
  }

  div.is-reactions-reaction {
    float: left;
    font-size: 20px;
    margin-top: 3px;
  }

  div.is-reactions-summary {
    float: left;
    margin-left: 8px;
    margin-top: 8px;
  }
}

div.is-comments {
  float: left;
  text-align: right;
  height: 32px;
  padding-top: 4px;

  div.is-comments-authors {
    float: left;

    &:not(:empty){
      margin-right: 8px;
    }

    div.is-comments-author {
      float: left;
      width: 24px;
      height: 24px;
      border: 2px solid white;
      background-color: white;
      border-radius: 12px;
      margin-left: -9px;

      img {
        max-width: 22px;
        max-height: 22px;
        margin-top: -2px;
        margin-left: 1px;
        border-radius: 11px;
      }

      &:first-child {
        margin-left: 0px;
      }
    }
  }

  div.is-comments-summary {
    float: left;
    font-size: 14px;
    color: $ui_grey;
    @include avenir_M();
    margin-top: 3px;
  }
}

div.interactions-summary {
  float: left;
}

